# hypothesis-generation-demo

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.base  Dockerfile.prefect  Dockerfile.prolog  README.md  analysis_tasks.py  api.py  app.py  auth.py  compile_kb.py  config.json  config.py  cravat_server.py  dask_preload.py  db.py  deployment.py  deployments.py  docker-compose.yml  enrich.py  entrypoint.sh  flows.py  gene_expression_tasks.py  inference_util.py  llm.py  logging_config.py  main.py  mp_example.pl  mp_example.py  project_tasks.py  pyproject.toml  query_swipl.py  requirements.txt  run_deployment.py  seed_database.py  semantic_search.py  server.py  socket.html  (+9 more)
.github/workflows/: cd-production-deployment.yml  cd-staging-deployment.yml  ci-docker-build-push.yml  ci-production-build.push.yml  ci-staging-build-push.yml
adapters/: gene_name_mapping.py
config/: harmonizer_custom.config  kb.yaml  kb_v3.yaml
data/: brown_preadipocytes_irx3_corr_background_genes.pkl  brown_preadipocytes_irx3_corr_top_500_genes.pkl
db/: __init__.py  analysis_handler.py  base_handler.py  enrichment_handler.py  file_handler.py  gene_expression_handler.py  gwas_library_handler.py  hypothesis_handler.py  phenotype_handler.py  project_handler.py  task_handler.py  user_handler.py
docker/: Dockerfile  Dockerfile.prefect  Dockerfile.prolog  docker-compose.yml
k8s/staging/: api.yaml  dask-worker.yaml  prefect-deployment.yaml  prefect-service.yaml  prolog.yaml  redis.yaml
notebooks/: AD_regulome_analysis_notebook.py  finemapping_susie_for_ALL_chr_updated.ipynb  finemapping_susie_grch37.ipynb  gene_correlation_matrix.ipynb  ldsc_gtex_gene_correlation_matrix.py  llm_causal_gene_pred.ipynb  llm_connect.ipynb  rag_transformers_outlines.ipynb
notebooks/gene_expression/: ldsc_gtex_gene_correlation_matrix.py
pl/: bg.pl  compile.pl  hook.pl  hypgen.pl  json_util.pl  load_kbs.pl  meta_interpreter.pl  models.pl  param_learn.pl  pl_rules.pl  queries.pl  rules.pl  server.pl  smokes.pl  smokes_param_learn.pl  test_models.txt  util.pl
scripts/: README.md  compile_kb.py  gwas_manifest_parser.py  opentargets_benchmark.py  populate_gwas_library.py
scripts/1000Genomes_phase3/: 0_harmoniser_setup.sh  1_download_vcfs.sh  2_normalise_vcfs.sh  3_make_population_ids.sh  4_convert_to_plink.sh  5_liftover_to_b38.sh  6_harmoniser.sh  7_align_ld_to_ssf.sh  8_gcta_cojo_analysis.sh  RUN_SCRIPTS.sh
src/: app.py  config.py  container.py  cravat_server.py  dask_preload.py  deployments.py  log_monitor.py  run_deployment.py  seed_database.py  utils.py
src/api/: __init__.py  auth.py  dependencies.py  socketio.py
src/api/routes/: files.py  (+7 more)
src/db/: analysis_handler.py  enrichment_handler.py  file_handler.py  gene_expression_handler.py  gwas_library_handler.py  hypothesis_handler.py  project_handler.py  summary_handler.py  task_handler.py
src/flows/: __init__.py  analysis.py  enrichment.py  hypothesis.py
src/services/: enrich.py  llm.py  prolog.py  socketio_relay.py  state_cache.py  status_tracker.py  storage.py
src/tasks/: __init__.py  analysis.py  enrichment.py  gene_expression.py  hypothesis.py  project.py
(+10 files in other folders)
