[project]
name = "hypothesis-generation-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "outlines",
    "Flask",
    "flask-restful",
    "gseapy",
    "faiss-gpu",
    "python-dotenv",
    "PyJWT==2.9.0",
    "pymongo",
    "torch",
    "torchvision",
    "torchaudio",
    "sentence-transformers",
    "llama_index",
    "llama-index-llms-anthropic",
    "pengines",
    "flask-cors",
    "prefect>=2.14.0",
    "flask-socketio",
    "eventlet",
    "python-socketio",
    "Flask-JWT-Extended==4.6.0",
    "requests",
    "gwaslab",
    "cyvcf2",
    "polars",
    "websocket-client",
    "tzlocal",
    "PyYAML",
    "psutil",
    "pronto",
    "tiledbsoma",
    "cellxgene-census",
    "loguru>=0.7.3",
    "marimo[lsp]>=0.16.5",
    "numpy>=1.24.0,<2.0.0",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "pysam>=0.23.1",
    "ruff>=0.11.12",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "watchdog>=6.0.0",

]

[project.optional-dependencies]
r-integration = ["rpy2>=3.6.0"]