[project]
name = "hypothesis-generation-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.4.4",
    "outlines",
    "Flask",
    "flask-restful",
    "gseapy",
    "faiss-gpu",
    "python-dotenv",
    "PyJWT==2.11.0",
    "pymongo",
    "torch",
    "torchvision",
    "torchaudio",
    "sentence-transformers",
    "llama_index",
    "llama-index-llms-anthropic",
    "pengines",
    "flask-cors",
    "prefect",
    "flask-socketio",
    "eventlet",
    "python-socketio",
    "Flask-JWT-Extended==4.7.1",
    "loguru",
    "requests",
    "gwaslab",
    "cyvcf2",
    "polars",
    "websocket-client",
    "optuna",
    "tzlocal",
    "pandas",
    "PyYAML",
    "psutil",
    "rpy2"
]
